--- a/css/home.css
+++ b/css/home.css
@@ -62,6 +62,8 @@
 @media (min-width: 1024px) {
   .nav-links {
     display: flex;
+    gap: 2rem;
+    align-items: center;
   }
 }
 
